<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:baselineAligned="false" >

    <LinearLayout
        android:id="@+id/LayoutHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="3dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="#341144"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Bienvenida"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutBody"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:background="#345544"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LayoutBodyDescripcion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="#3455f4"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TitleDescripcion"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/Descripcion"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutBodyInstrucciones"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="#3455f4"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TitleInstrucciones"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:gravity="center_horizontal"
                android:text="@string/Instrucciones"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutBodyFormulario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="#2355f4"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/LayoutBodyFormularioNombre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="#2355f4"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/LabelNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LabelNombre" >
                </TextView>

                <EditText
                    android:id="@+id/EditTextNombre"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="Max PoweR"
                    android:inputType="text" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutBodyFormularioBoton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="#2355f4"
                android:gravity="center|center_horizontal"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/BotonEnviarFormulario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/BotonEnviarFormulario" />
                  <Button
                    android:id="@+id/BotonMostrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Mostrar" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutBodyPruebaBorrar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="#610f1d"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LabelPruebaBorrar"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/TextViewPrueba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/TextBorrar"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutFoot"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="horizontal" >
    </LinearLayout>

</LinearLayout>